--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 <body>
-<p>Some text</p>
+<label for="search">Search</label>
+<input type="search" name="search" autofocus="">
 <script src="main.js"></script>
 </body>
 </html>
