added fetch api

--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 <body>
-<label for="search">Search</label>
-<input type="search" name="search" autofocus="">
-<script src="main.js"></script>
+	<div class="search-container">
+		
+		<input type="search" name="search" autofocus="">
+		<i class="fas fa-search fa-lg"></i>
+		<label for="search">Search</label>
+	</div>
+	<script src="main.js"></script>
 </body>
 </html>
