--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+
+	<!-- jquery -->
+	<script
+	src="https://code.jquery.com/jquery-3.3.1.min.js"
+	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+	crossorigin="anonymous"></script>
 	
 	<!-- Font Awesome -->
-	<script src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.11/css/all.css" integrity="sha384-p2jx59pefphTFIpeqCcISO9MdVfIm4pNnsL08A6v5vaQc4owkQqxMV8kg4Yvhaw/" crossorigin="anonymous">
 </head>
 <body>
 	<div class="search-container">
