Basic features are working

--- a/index.html
+++ b/index.html
@@ -21,11 +21,23 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.11/css/all.css" integrity="sha384-p2jx59pefphTFIpeqCcISO9MdVfIm4pNnsL08A6v5vaQc4owkQqxMV8kg4Yvhaw/" crossorigin="anonymous">
 </head>
 <body>
-	<div class="search-container">
-		
+	<div class="wiki-image">
+		<img src="images/wikipedia.png">
+	</div>
+	<div class="searchbar-container">
 		<input type="search" name="search" autofocus="">
 		<i class="fas fa-search fa-lg"></i>
-		<label for="search">Search</label>
+		<!-- <label for="search">Search</label> -->
+	</div>
+
+	<div class="random-article">
+		<a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">
+			<p>Random article</p>
+		</a>
+	</div>
+
+	<div class="search-results">
+
 	</div>
 	<script src="main.js"></script>
 </body>
