Styled the search bar and the buttons

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 	</div>
 	<div class="searchbar-container">
 		<input type="search" name="search" autofocus="">
-		<i class="fas fa-search fa-lg"></i>
-		<!-- <label for="search">Search</label> -->
 	</div>
-
-	<div class="random-article">
-		<a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">
+	<div class="search-buttons">
+		<button class="btn">
+			<p>Search Wikipedia</p>
+		</button>
+		<a class="btn" href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">			
 			<p>Random article</p>
 		</a>
 	</div>
