implemented header after search class (header-as)

--- a/index.html
+++ b/index.html
@@ -21,19 +21,23 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.11/css/all.css" integrity="sha384-p2jx59pefphTFIpeqCcISO9MdVfIm4pNnsL08A6v5vaQc4owkQqxMV8kg4Yvhaw/" crossorigin="anonymous">
 </head>
 <body>
-	<div class="wiki-image">
-		<img src="images/wikipedia.png">
-	</div>
-	<div class="searchbar-container">
-		<input type="search" name="search" autofocus="">
-	</div>
-	<div class="search-buttons">
-		<button class="btn">
-			<p>Search Wikipedia</p>
-		</button>
-		<a class="btn" href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">			
-			<p>Random article</p>
-		</a>
+	<div class="header-as">
+		<div class="img-searchbar">
+			<div class="wiki-image">
+				<img src="images/wikipedia.png">
+			</div>
+			<div class="searchbar-container">
+				<input type="search" name="search" autofocus="">
+			</div>
+		</div>
+		<div class="search-buttons">
+			<button class="btn">
+				<p>Search Wikipedia</p>
+			</button>
+			<a class="btn" href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">			
+				<p>Random article</p>
+			</a>
+		</div>
 	</div>
 
 	<div class="search-results">
