validated invalid search input

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.11/css/all.css" integrity="sha384-p2jx59pefphTFIpeqCcISO9MdVfIm4pNnsL08A6v5vaQc4owkQqxMV8kg4Yvhaw/" crossorigin="anonymous">
 </head>
 <body>
-	<div class="header-as">
+	<div class="header">
 		<div class="img-searchbar">
 			<div class="wiki-image">
 				<img src="images/wikipedia.png">
